--- a/css/app.css
+++ b/css/app.css
@@ -42,8 +42,9 @@ body {
     line-height: 1;
 }
 ol, ul {
-    list-style: none;
+    /*list-style: none;*/
 }
+
 blockquote, q {
     quotes: none;
 }
@@ -454,8 +455,7 @@ body     { pointer-events: none; }
     display: block;
     font-size: 50px;
     line-height: 72px;
-
-    margin-top: 100px;
+    margin-top: 10px;
 }
 
 .slide q strong {
@@ -494,3 +494,19 @@ body     { pointer-events: none; }
     display: block;
 }
 
+.bob {
+    margin: 50px;
+    width: 192px;
+    height: 256px;
+}
+
+.clean-code {
+    margin: 50px;
+    width: 240px;
+    height: 256px;
+}
+
+pre.prettyprint {
+    padding: 0;
+    border: 2px solid #888;
+}
